--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ node_modules
 dist
 dist-ssr
 *.local
-firebaseConfig.js
+src/utils/firebaseConfig.js
+src/App_old.jsx
 
 # Editor directories and files
 .vscode/*
